--- a/src/app/common-ui/profile-card/profile-card.component.scss
+++ b/src/app/common-ui/profile-card/profile-card.component.scss
@@ -3,7 +3,7 @@
   border-radius: 2px;
   padding: 32px 24px;
   display: grid;
-  grid-template-columns:repeat(4, 1fr);
+  grid-template-columns:repeat(2, 1fr) 200px 1fr;
   grid-gap: 32px
 }
 
@@ -24,4 +24,10 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.profile-card__tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
 }
