--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -5,3 +5,28 @@
   align-items: center;
   margin: 0 5%;
 }
+
+.tt-control-label{
+  display: block;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 16px;
+}
+
+.tt-input{
+  width: 100%;
+  margin-top: 8px;
+  border: solid, 1px var(--light-color);
+  border-radius: 2px;
+  padding: 12px 20px;
+  background: transparent;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 21px;
+  color: var(--light-color) 75%;
+  font-family: "JetBrains Mono", sans-serif;
+}
+
+.btn{
+  width: 100%;
+}
