--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -15,6 +15,7 @@
   </label>
   <button
     type="submit"
-    class="btn btn-shadow">Войти</button>
+    class="btn btn-shadow">Войти
+  </button>
 </form>
 <img src="assets/img/Logo-big.png">
